--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <a href="#welcome-section">About</a>
             </li>
             <li>
-                <a href="projects">Projects</a>
+                <a href="#projects">Projects</a>
             </li>
             <li>
-                <a href="contact">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
     </nav>
@@ -28,9 +28,42 @@
     <section id="projects" class="project-section">
         <h2 class="project-section-title">These are some of my projects</h2>
         <div class="projects-grid">
-            <div>
-                <img src="" alt="City Skyline">
-            </div>
+            <a>
+                <img src="assets/CitySkyline.png" alt="City Skyline" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> City Skyline <span class="effect">/></span>
+                </p>
+            </a>
+            <a>
+                <img src="assets/JSDocumentation.png" alt="JS Documentation" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> Javascript Documentation <span class="effect">/></span>
+                </p>
+            </a>
+            <a>
+                <img src="assets/Magazine.png" alt="Magazine" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> Magazine <span class="effect">/></span>
+                </p>
+            </a>
+            <a>
+                <img src="assets/Product Landing Page.png" alt="Product Landing Page" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> Product Landing Page <span class="effect">/></span>
+                </p>
+            </a>
+            <a>
+                <img src="assets/Tribute Page.png" alt="Tribute Page" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> Tribute Page <span class="effect">/></span>
+                </p>
+            </a>
+            <a>
+                <img src="assets/SurveyForm.png" alt="Survey Form" class="project-picture">
+                <p class="project-title">
+                    <span class="effect"><</span> Survey Form <span class="effect">/></span>
+                </p>
+            </a>
         </div>
     </section>
     <section id="contact">
