--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/d0a301b89a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dosis">
-    <title>Personal Portofolio</title>
+    <script type="text/Javascript" src="script.js"></script>
+    <title>Adril's Portfolio</title>
 </head>
 <body>
     <nav id="navbar">
@@ -26,51 +28,80 @@
         <p>your average CS (weeb) student</p>
     </section>
     <section id="projects" class="project-section">
-        <h2 class="project-section-title">These are some of my projects</h2>
-        <div class="projects-grid">
-            <a>
-                <img src="assets/CitySkyline.png" alt="City Skyline" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> City Skyline <span class="effect">/></span>
-                </p>
+        <div class="container reveal fade-bottom">
+            <h2 class="project-section-title">These are some of my projects</h2>
+            <div class="projects-grid">
+                <a>
+                    <img src="assets/CitySkyline.png" alt="City Skyline" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> City Skyline <span class="effect">/></span>
+                    </p>
+                </a>
+                <a>
+                    <img src="assets/JSDocumentation.png" alt="JS Documentation" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> Javascript Documentation <span class="effect">/></span>
+                    </p>
+                </a>
+                <a>
+                    <img src="assets/Magazine.png" alt="Magazine" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> Magazine <span class="effect">/></span>
+                    </p>
+                </a>
+                <a>
+                    <img src="assets/Product Landing Page.png" alt="Product Landing Page" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> Product Landing Page <span class="effect">/></span>
+                    </p>
+                </a>
+                <a>
+                    <img src="assets/Tribute Page.png" alt="Tribute Page" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> Tribute Page <span class="effect">/></span>
+                    </p>
+                </a>
+                <a>
+                    <img src="assets/SurveyForm.png" alt="Survey Form" class="project-picture">
+                    <p class="project-title">
+                        <span class="effect"><</span> Survey Form <span class="effect">/></span>
+                    </p>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section id="contact" class="contact-sect">
+        <div class="contact-header">
+            <h2>contact me on</h2>
+        </div>
+        <div class="contact-app">
+            <a href="https://www.instagram.com/mnrgadril28/" target="_blank" class="contact-details">
+                <i class="fa-brands fa-instagram"></i>
+                Instagram
             </a>
-            <a>
-                <img src="assets/JSDocumentation.png" alt="JS Documentation" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> Javascript Documentation <span class="effect">/></span>
-                </p>
+            <a href="https://www.linkedin.com/in/adril-putra-merin-m-b11284249" target="_blank" class="contact-details">
+                <i class="fa-brands fa-square-facebook"></i>
+                Linkedin
             </a>
-            <a>
-                <img src="assets/Magazine.png" alt="Magazine" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> Magazine <span class="effect">/></span>
-                </p>
+            <a href="https://github.com/ninoaddict" target="_blank" class="contact-details">
+                <i class="fa-brands fa-square-github"></i>
+                Github
             </a>
-            <a>
-                <img src="assets/Product Landing Page.png" alt="Product Landing Page" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> Product Landing Page <span class="effect">/></span>
-                </p>
+            <a href="https://twitter.com/ninoaddict_" target="_blank" class="contact-details">
+                <i class="fa-brands fa-square-twitter"></i>
+                Twitter
             </a>
-            <a>
-                <img src="assets/Tribute Page.png" alt="Tribute Page" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> Tribute Page <span class="effect">/></span>
-                </p>
-            </a>
-            <a>
-                <img src="assets/SurveyForm.png" alt="Survey Form" class="project-picture">
-                <p class="project-title">
-                    <span class="effect"><</span> Survey Form <span class="effect">/></span>
-                </p>
+            <a href="wa.me/6282297365702" target="_blank" class="contact-details">
+                <i class="fa-brands fa-square-whatsapp"></i>
+                Whatsapp
             </a>
         </div>
     </section>
-    <section id="contact">
-
-    </section>
     <footer>
-
+        <p>Made with 
+            <i class="fa-sharp fa-solid fa-heart"></i>
+            by Adril
+        </p>
     </footer>
 </body>
 </html>
