update index and styles

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </ul>
     </nav>
     <section id="welcome-section">
-        <h2><span class="smth">Hi,</span> I am Adril</h2>
+        <h1><span class="smth">Hi,</span> I am Adril</h1>
         <p>your average CS (weeb) student</p>
     </section>
     <section id="projects" class="project-section">
-        <div class="container reveal fade-bottom">
+        <div class="project-tile reveal fade-bottom">
             <h2 class="project-section-title">These are some of my projects</h2>
             <div class="projects-grid">
                 <a>
@@ -83,7 +83,7 @@
                 <i class="fa-brands fa-square-facebook"></i>
                 Linkedin
             </a>
-            <a href="https://github.com/ninoaddict" target="_blank" class="contact-details">
+            <a href="https://github.com/ninoaddict" target="_blank" class="contact-details" id="profile-link">
                 <i class="fa-brands fa-square-github"></i>
                 Github
             </a>
