update linkedin icon

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 Instagram
             </a>
             <a href="https://www.linkedin.com/in/adril-putra-merin-m-b11284249" target="_blank" class="contact-details">
-                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-linkedin"></i>
                 Linkedin
             </a>
             <a href="https://github.com/ninoaddict" target="_blank" class="contact-details" id="profile-link">
